fix: now unread always stays visible above other things like spotify controls etc.
There was an issue when the `unread button` would go below others (spotify control, screen share etc. etc.). This fixes those issues.

--- a/dark.mode.css
+++ b/dark.mode.css
@@ -244,6 +244,17 @@
     border-radius: 20px;
 }
 
+/* Fix so that the unread button/container always stays visible
+ on top of other stuff like spotify controls etc */
+
+.unreadBottom_c43953 {
+    z-index: 9999 !important;
+}
+
+.container_eba0ba.bottom_eba0ba {
+    z-index: 9999 !important;
+}
+
 /*spotify gradient thing*/
 .theme-dark .timeline-UWmgAx:hover .barFill-Dhkah7 {
     background: linear-gradient(135deg, #2b2b2b, var(--accentcolorV2));
